#58 Fixed Sonar issues